--- a/MyJira/MyJira/Views/Task/Show.cshtml
+++ b/MyJira/MyJira/Views/Task/Show.cshtml
@@ -1,86 +1,100 @@
 ﻿@model MyJira.Models.Task
 
-@{
-    ViewBag.Title2 = "Show";
-}
 
-<h1>@ViewBag.Title2</h1>
-
-@if (ViewBag.message != null)
+@*@if (ViewBag.message != null)
 {
     <h3 class="alert alert-info" role="alert">@ViewBag.message</h3>
-}
+}*@
 
-
-<div class="panel panel-default">
-    <div class="panel-heading"> <span class="label label-default">@ViewBag.Project.Name</span> | @Model.Title</div>
-
-    <div class="panel-body">
-        <p><strong>Description:</strong> @Model.Description</p>
-        <p><strong>Status:</strong> @Model.Status</p>
-        <p><i class="glyphicon glyphicon-user"> </i><i> reported by </i><strong> @Model.Reporter.UserName </strong></p>
-        @if (Model.AssigneeId == null)
-        {
-            <p><strong>Assignee:</strong> None</p>
-        }
-        else
-        {
-            <p><strong>Assignee:</strong> @Model.Assignee.UserName</p>
-        }
-        <p><strong>Start time:</strong> <i>@Model.StartTime</i></p>
-        @if (Model.Status == MyJira.Models.TaskStatus.Done)
-        {
-            <p><strong>Finish time:</strong> <i>@Model.FinishTime</i></p>
-        }
-
-        @foreach (MyJira.Models.Comment comment in ViewBag.Comments)
-        {
+<div id="myjira">
+    <div id="task-show-container">
+        <div class="col-lg-8">
             <div class="panel panel-default">
-                <div class="panel-heading"> <span class="label label-default">@comment.User.UserName</span> - <i>@comment.Date</i></div>
-
-                <div class="panel-body">
-                    @Html.Raw(comment.Content)
-                    <br />
-                </div>
-                
-                @if (comment.UserId == ViewBag.currentUser || ViewBag.Project.LeaderId == ViewBag.currentUser || ViewBag.userIsAdmin)
-                {
-                    <div class="panel-footer">
-                        <a class="btn btn-sm btn-success" href="/Task/EditComment/@comment.Id">Edit</a>
-                        @using (Html.BeginForm(actionName: "DeleteComment", controllerName: "Task", method: FormMethod.Post, routeValues: new {id = @comment.Id}, htmlAttributes: new {style = "display: inline"}))
-                        {
-                            @Html.HttpMethodOverride(HttpVerbs.Delete)
-                            <button class="btn btn-sm btn-success" type="submit">Delete</button>
-                        }
+                <div class="panel-body" style="background-color: lightgrey">
+                    <div style="text-align: center">
+                        <p style="font-size: 150%;"><strong>@ViewBag.Project.Name | @Model.Title</strong></p>
                     </div>
-                }
+                    <br />
+                    <p style="font-size: 125%;"><strong>Description:</strong> @Model.Description</p>
+                    <br />
+                    <div style="font-size: 125%; text-align: end;">
+                        <strong>Comments</strong>
+                    </div>
+                    <hr style="border-width: 3px;"/>
+                    @foreach (MyJira.Models.Comment comment in ViewBag.Comments)
+                    {
+                        <div class="panel panel-default">
+                            <div class="panel-heading" style="position: relative">
+                                <span class="label label-default">@comment.User.UserName</span> - <i>@comment.Date</i>
 
+                                @if (comment.UserId == ViewBag.currentUser || ViewBag.Project.LeaderId == ViewBag.currentUser || ViewBag.userIsAdmin)
+                                {
+                                    <a class="btn btn-sm" href="/Task/EditComment/@comment.Id" style="color: #526760; position: absolute; right: 3%; font-size: 130%; bottom: 0%;"><span class="glyphicon glyphicon-cog"></span></a>
+                                    using (Html.BeginForm(actionName: "DeleteComment", controllerName: "Task", method: FormMethod.Post, routeValues: new { id = @comment.Id }, htmlAttributes: new { style = "display: inline" }))
+                                    {
+                                        @Html.HttpMethodOverride(HttpVerbs.Delete)
+                                        <button type="submit" class="btn btn-sm" style="color: #526760; border: 0px; background-color: transparent; position: absolute; right: 0%; font-size: 130%; bottom: 0%">
+                                            <span class="glyphicon glyphicon-trash"></span>
+                                        </button>
+                                    }
+
+                                }
+                            </div>
+
+                            <div class="panel-body">
+                                @Html.Raw(comment.Content)
+                                <br />
+                            </div>
+                        </div>
+                    }
+
+                    @if (Model.TeamId == ViewBag.TeamIdUser || ViewBag.Project.LeaderId == ViewBag.currentUser || ViewBag.userIsAdmin)
+                    {
+                        <form method="post" action="/Task/AddComment/">
+                            <textarea class="summernote" name="Content"></textarea>
+                            <input type="hidden" name="Date" value="@DateTime.Now" />
+                            <input type="hidden" name="UserId" value="@ViewBag.currentUser" />
+                            <input type="hidden" name="TaskId" value="@Model.Id" />
+                            <button class="btn btn-sm btn-success" type="submit">Add Comment</button>
+                        </form>
+                    }
+
+                </div>
             </div>
-        }
-        
-        @if(Model.TeamId == ViewBag.TeamIdUser || ViewBag.Project.LeaderId == ViewBag.currentUser || ViewBag.userIsAdmin)
-        {
-            <form method="post" action="/Task/AddComment/">
-                <textarea class="summernote" name="Content"></textarea>
-                <br/>
-                <input type="hidden" name="Date" value="@DateTime.Now"/>
-                <input type="hidden" name="UserId" value="@ViewBag.currentUser"/>
-                <input type="hidden" name="TaskId" value="@Model.Id"/>
-                <button class="btn btn-sm btn-success" type="submit">Add Comment</button>
-            </form>
-        }
-
-    </div>
-    
-    @if (Model.ReporterId == ViewBag.currentUser || Model.AssigneeId == ViewBag.currentUser || ViewBag.Project.LeaderId == ViewBag.currentUser || ViewBag.userIsAdmin)
-    {
-        <div class="panel-footer">
-            <a class="btn btn-sm btn-success" href="/Task/Edit/@Model.Id">Edit</a>
-            @using (Html.BeginForm(actionName: "Delete", controllerName: "Task", method: FormMethod.Post, routeValues: new {id = @Model.Id}, htmlAttributes: new {style = "display: inline"}))
-            {
-                @Html.HttpMethodOverride(HttpVerbs.Delete)
-                <button class="btn btn-sm btn-success" type="submit">Delete</button>
-            }
         </div>
-    }
+        
+        <div class="col-lg-3" style="margin-left: 5%; background-color: lightgrey; border: 1px solid white; position: relative; border-radius: 5px;">
+            @if (Model.ReporterId == ViewBag.currentUser || Model.AssigneeId == ViewBag.currentUser || ViewBag.Project.LeaderId == ViewBag.currentUser || ViewBag.userIsAdmin)
+            {
+                <div>
+                    <a class="btn btn-sm " href="/Task/Edit/@Model.Id" style="color: #526760; font-size: 200%; position: absolute; right: 10%;"><span class="glyphicon glyphicon-cog"></span></a>
+                    @using (Html.BeginForm(actionName: "Delete", controllerName: "Task", method: FormMethod.Post, routeValues: new {id = @Model.Id}, htmlAttributes: new {style = "display: inline"}))
+                    {
+                        @Html.HttpMethodOverride(HttpVerbs.Delete)
+                        <button type="submit" class="btn btn-sm" style="color: #526760; border: 0px; background-color: transparent; font-size: 200%; position: absolute; right: 0%;">
+                            <span class="glyphicon glyphicon-trash"></span>
+                        </button>
+                    }
+                </div>
+            }
+            <br/>
+            <div style="font-size: 150%;">
+                <p><strong>Status:</strong> @Model.Status</p>
+                <p><i class="glyphicon glyphicon-user"> </i><i> reported by </i><strong> @Model.Reporter.UserName </strong></p>
+                @if (Model.AssigneeId == null)
+                {
+                    <p><strong>Assignee:</strong> None</p>
+                }
+                else
+                {
+                    <p><strong>Assignee:</strong> @Model.Assignee.UserName</p>
+                }
+                <p><strong>Start time:</strong> <i>@Model.StartTime</i></p>
+                @if (Model.Status == MyJira.Models.TaskStatus.Done)
+                {
+                    <p><strong>Finish time:</strong> <i>@Model.FinishTime</i></p>
+                }
+            </div>
+        </div>
+    </div>
 </div>
